--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,6 @@ dependencies {
     implementation('com.squareup.okhttp3:okhttp:3.4.1') { transitive=true }
     implementation('com.google.code.gson:gson:2.7') { transitive=true }
     implementation('com.github.bumptech.glide:glide:3.7.0') { transitive=true }
+    implementation('androidx.appcompat:appcompat-resources:1.4.1')
+
 }
